--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.14",
   "description": "Dynamo Home",
   "author": "Autodesk Inc.",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "lint:check": "eslint src/ tests/",
     "lint:fix": "eslint src/ tests/ --fix",
     "test:unit": "NODE_ENV=test jest tests/App.test.js",
     "test:e2e": "playwright test tests/e2e.test.js",
     "test": "npm run test:unit && npm run test:e2e",
-    "start": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js --mode=development",
-    "bundle": "webpack --config webpack.config.js --mode=production",
+    "start": "webpack serve --config webpack.config.ts",
+    "build": "webpack --config webpack.config.ts --mode=development",
+    "bundle": "webpack --config webpack.config.ts --mode=production",
     "production": "npm run bundle && cp -R package.json README.md license_output dist",
     "license:direct": "npx @adsk/adsk-npm-license-puller --path . --app-name 'dynamo-home' --verbose --about-box ./license_output/about-box_direct.html --about-box-type desktop --year $(date) --paos ./license_output/paos_direct.csv",
     "license:transitive": "npx @adsk/adsk-npm-license-puller --path . --app-name 'dynamo-home' --verbose --about-box ./license_output/about-box_transitive.html --about-box-type desktop --transitive --year $(date) --paos ./license_output/paos_transitive.csv",
@@ -38,6 +38,10 @@
     "url": "git+https://github.com/DynamoDS/DynamoHome.git"
   },
   "dependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.6.1",
@@ -59,6 +63,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
