--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "lint:check": "eslint src/ tests/",
     "lint:fix": "eslint src/ tests/ --fix",
-    "test:unit": "NODE_ENV=test jest tests/App.test.js",
-    "test:e2e": "playwright test tests/e2e.test.js",
+    "test:unit": "NODE_ENV=test & jest tests/App.test.ts",
+    "test:e2e": "playwright test tests/e2e.test.ts",
     "test": "npm run test:unit && npm run test:e2e",
     "start": "webpack serve --config webpack.config.ts",
     "build": "webpack --config webpack.config.ts --mode=development",
@@ -38,10 +38,7 @@
     "url": "git+https://github.com/DynamoDS/DynamoHome.git"
   },
   "dependencies": {
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.6.1",
@@ -53,7 +50,11 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@playwright/test": "^1.27.1",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/dom": "^10.3.0",
+    "@testing-library/react": "^15.0.6",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.57.0",
@@ -63,6 +64,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
