set NODE_ENV back to production after run test

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -45,6 +45,7 @@ jobs:
           NODE_ENV: test
         run: npm run test:unit
       - name: The final publish step within dist folder
+        NODE_ENV: production
         working-directory: dist
         # This will publish the package and set access to public as if you had run npm access public after publishing.
         run: npm publish --access public
