--- a/.adsk/ContinuousLocalization.yml
+++ b/.adsk/ContinuousLocalization.yml
@@ -23,6 +23,6 @@ common:
     - name: DynamoHome  
       main_owner: Soft
       content_owner: N/A
-      lang: [csy, deu, esp, fra, ita, jpn, kor, plk, ptb, rus, chs, cht]
+      lang: [csy, deu, esp, fra, ita, jpn, kor, plk, ptb, rus, chs, cht, eng]
       file_rules:
         - src\locales\**en.json, src\locales\**%langBCP47%.json
